--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     // Alternatively, use ArSceneView without the UX dependency.
     implementation 'com.google.ar.sceneform:core:1.14.0'
     implementation 'com.google.ar:core:1.14.0'
+    implementation 'com.github.jiangdongguo:AndroidUSBCamera:2.3.1'
 }
