--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     implementation 'com.google.ar.sceneform:core:1.14.0'
     implementation 'com.google.ar:core:1.14.0'
     implementation 'com.github.jiangdongguo:AndroidUSBCamera:2.3.1'
+    implementation 'com.devbrackets.android:exomedia:4.3.0'
 }
